[package]
name = "stellar-xdr-json"
version = "0.0.2"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.93"
# schemars = "0.8.16"
console_error_panic_hook = { version = "0.1.7", optional = true }
# TODO: For use with generating native values.
# serde-wasm-bindgen = "0.6.5"

[dependencies.stellar-xdr]
version = "22.0.0-rc.1.1"
features = ["std", "curr", "base64", "serde", "serde_wasm_bindgen"]
path = "../rs-stellar-xdr"
# git = "https://github.com/stellar/rs-stellar-xdr"
# rev = "89a8bcde36aeda551cb0e3f9aa3e9fcf315fe1cc"

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.dev]
opt-level = "z"
debug = 0
strip = "symbols"

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false

